--- a/config.json
+++ b/config.json
@@ -1,16 +1,18 @@
 {
-	"appName": "ballbotV3",
-	"botName": "ballbot",
-	"githubEmail": "iqbalsheila619@gmail.com",
-	"githubName": "bolaxd",
-	"developer": ["6285728625940"],
-	"owner": [],
-	"moderator": [],
-	"sessionName": "sessions",
-	"dbName": "database.json",
-	"isOnline": false,
-	"longQR": 60000,
-	"PORT": 3002,
-	"message": "Uptime Robot!!",
-	"router": "/"
+  "appName": "ballbotV3",
+  "botName": "ballbot",
+  "githubEmail": "iqbalsheila619@gmail.com",
+  "githubName": "bolaxd",
+  "developer": [
+    "6285728625940"
+  ],
+  "owner": [],
+  "moderator": [],
+  "sessionName": "sessions",
+  "dbName": "database.json",
+  "isOnline": false,
+  "longQR": 60000,
+  "PORT": 3017,
+  "message": "Uptime Robot!!",
+  "router": "/"
 }
