--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "cheerio": "^1.0.0-rc.12",
     "got": "^12.5.3",
     "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=0.18.0"
   }
 }
