--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/bolaxd/ballbotV3#readme",
   "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
     "@adiwajshing/keyed-db": "^0.2.4",
+    "baileys": "^6.0.7",
     "cheerio": "^1.0.0-rc.12",
     "got": "^12.5.3",
     "qrcode-terminal": "^0.12.0"
